Fix for bug #19371: [DOGFOOD][REGRESSION] entering text and hitting                     return in new message crashes app Modified nsMsgCompose::ConvertAndLoadComposeWindow() to make sure aBuf was valid before using it with an editor method. a=sfraser@netscape.com a=leaf@mozilla.org